--- a/src/app.html
+++ b/src/app.html
@@ -19,9 +19,8 @@
 		/>
 		<link
 			rel="stylesheet"
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+			href="/css/bootstrap.min.css"
 		/>
-
 		%svelte.head%
 	</head>
 	<body>
