--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,10 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="/favicon.png" />
+		<link rel="apple-touch-icon" href="/favicons/apple-touch-icon.png" sizes="180x180">
+		<link rel="icon" href="/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
+		<link rel="icon" href="/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
+		<link rel="icon" href="/favicons/favicon.ico">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%svelte.head%
 	</head>
